# garconne

./: .dockerignore  .editorconfig  .env  .flake8  .gitignore  .grafana.env  .mdlrc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
contrib/grafana/dashboards/: 4475_traefik_rev5.json
contrib/grafana/datasources/: datasources.yml
contrib/grafana/notifiers/: notifiers.yml
contrib/prometheus/: prometheus.yml
contrib/scripts/: configure_redisinsight.sh  generate_localhost_certificate.sh  mkcert_install.sh  vegeta_install.sh
contrib/traefik/: traefik.yml
contrib/traefik/conf.d/: middleware-admin-users.yml  middleware-compression.yml  middleware-hsts.yml  middleware-security-headers.yml  router-api.yml  router-ping.yml  tls.yml
garconne/: app.py  main.py  test_app.py  test_main.py
